homepage/nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: homepage-nodeport
  namespace: homepage
spec:
  selector:
    app: homepage
  ports:
  - name: homepage-nodeport
    protocol: TCP
    port: 80
    targetPort: 3000
    nodePort: 30081
  type: NodePort
  ipFamilyPolicy: PreferDualStack
  ipFamilies:
  - IPv4
  - IPv6
