homepage/unsloth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: unslothmac
  namespace: homepage
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8888
  type: ClusterIP
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: unslothmac-external
  namespace: homepage
  labels:
    kubernetes.io/service-name: unslothmac
addressType: IPv4
ports:
- name: http
  appProtocol: http
  protocol: TCP
  port: 8888
endpoints:
- addresses:
  - 10.20.0.111
  conditions:
    ready: true
    serving: true
    terminating: false
